minor changes to the backgrounds, flexslider no longer has arrows clipped

--- a/phil_subtheme/style.css
+++ b/phil_subtheme/style.css
@@ -686,10 +686,11 @@ li.sfHover > a > .sf-sub-indicator {
 #post-content {
   display: inline;
   margin: 0;
+  color: white;
 }
 
 body.sidebar-first #post-content {
-  float: left;
+  float: right;
   margin: 0;
   padding: 0;
   width: 620px;
